Project/Repo renamed to nsnake

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A simple light-weight (hence the name earthworm), ncurses-based (hence the n in name) snake game. 
+A simple light-weight, ncurses-based (hence the n in name) snake game. 
